--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
         </div>
 
         <div id="transaction-area">
-            <h1>CONGRATULATION</h1>
+            <p style="font-size: 30px;font-weight: 900;">CONGRATULATION</p>
             <br>
-            <h3>Your Ticket Has Been Purchased</h3>
-            <h4 id="transaction"></h4>
+            <p style="font-size: 24px; font-weight: 900;">Your Ticket Has Been Purchased</p>
+            <h2 id="transaction"></h2>
         </div>
 
         <div class="booking-content">
