--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <!--Booking Section-->
-    <section class="main-content container">
+    <main class="main-content container">
         <div id="booking-area" class="booking-form">
             <h3>Booking Flights</h3>
             <div class="input-group">
@@ -115,7 +115,7 @@
                 veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise
                 voluptatibus quam</p>
         </div>
-    </section>
+    </main>
 
         <script>
 
