--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="booking-content">
-            <h1>discover <br> around the world</h1>
+            <h1>discover <br> around the world With Skeleton</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias
                 veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise
                 voluptatibus quam</p>
